test/expected/reinterpret_cast_v.out
reinterpret cast x into void
                        ^
25: error: invalid reinterpret_cast type "void"
